deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  labels:
    app: simple-web-app
  name: simple-web-app
spec:
  replicas: 1
  selector:
    matchLabels:
      app: simple-web-app
  template:
    metadata:
      labels:
        app: simple-web-app
    spec:
      containers:
      - image: shinychimra07/simple-web-app-img
        name: simple-web-app-container-v1
        ports:
        - containerPort: 8000
