service.yaml
apiVersion: v1
kind: Service
metadata:
  labels:
    app: simple-web-app
  name: simple-web-app
  namespace: default
spec:
  ports:
  - name: http
    port: 80
    protocol: TCP
    targetPort: 8000
  selector:
    app: simple-web-app
  type: ClusterIP
